[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["tensorturtle <tensorturtle@gmail.com>"]
readme = "README.md"
packages = [{include = "python_backend"}]

[tool.poetry.dependencies]
python = ">3.8,<=3.12"
bleak = "^0.21.1"
flask = "^3.0.2"
websockets = "^12.0"
pycycling = "^0.3.4"
bleak-fsm = "^0.2.0"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
